--- a/packages/openstoat-docs/src/pages/blogs/[...slug].astro
+++ b/packages/openstoat-docs/src/pages/blogs/[...slug].astro
@@ -45,7 +45,7 @@ const breadcrumbs = [
   <div class="flex gap-8">
     <div class="flex-1 min-w-0">
       <Breadcrumbs items={breadcrumbs} />
-      <article class="prose dark:prose-invert max-w-none">
+      <article class="prose max-w-none">
         <Content />
       </article>
       <NextPrev
